--- a/index.html
+++ b/index.html
@@ -1,13 +1,111 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Curtis McEnroe
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<div class="page-header">
+  <h1>Projects</h1>
+</div>
+
+<div class="row">
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h2>Applications</h2>
+
+    <h3>
+      <a href="https://github.com/programble/apricot">Apricot</a>
+      <small>Ruby</small>
+    </h3>
+    <p>Clojure-like Lisp on Rubinius</p>
+
+    <h3>
+      <a href="https://github.com/programble/effuse">Effuse</a>
+      <small>Ruby</small>
+    </h3>
+    <p>Tool for symlinking dotfiles</p>
+
+    <h3>
+      <a href="https://github.com/programble/keyloog">Keyloog</a>
+      <small>C</small>
+    </h3>
+    <p>Keylogger for X</p>
+  </div>
+
+  <div class="col-md-4">
+    <h2>Web</h2>
+
+    <h3>
+      <a href="https://github.com/programble/avery">Avery</a>
+      <small>Node.js</small>
+    </h3>
+    <p>MPD Client</p>
+
+    <h3>
+      <a href="https://github.com/programble/spibble">Spibble</a>
+      <small>Clojure, MongoDB</small>
+    </h3>
+    <p>Scrobble records as you spin them</p>
+
+    <h3>
+      <a href="https://github.com/programble/programble.github.io">programble.me</a>
+      <small>Jekyll</small>
+    </h3>
+    <p>Personal website</p>
+  </div>
+
+  <div class="col-md-4">
+    <h2>IRC</h2>
+
+    <h3>
+      <a href="https://github.com/programble/RCMP">RCMP</a>
+      <small>Ruby</small>
+    </h3>
+    <p>Github commit notification bot</p>
+
+    <h3>
+      <a href="https://github.com/programble/lastirc">Lastirc</a>
+      <small>Ruby</small>
+    </h3>
+    <p>Last.fm bot</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h2>Libraries</h2>
+
+    <h3>
+      <a href="https://github.com/programble/configru">Configru</a>
+      <small>Ruby</small>
+    </h3>
+    <p>YAML configuration library</p>
+
+    <h3>
+      <a href="https://github.com/programble/cljmb">CLJMB</a>
+      <small>Clojure</small>
+    </h3>
+    <p>MusicBrainz API client</p>
+  </div>
+
+  <div class="col-md-4">
+    <h2>Contributions</h2>
+
+    <h3>
+      <a href="https://github.com/Raynes/refheap">Refheap</a>
+      <small>Clojure, MongoDB</small>
+    </h3>
+    <p>"The Reference Heap" pastebin</p>
+  </div>
+
+  <div class="col-md-4">
+    <h2>Configurations</h2>
+
+    <h3><a href="https://github.com/programble/dotfiles">Dotfiles</a></h2>
+    <p>Various configuration files</p>
+
+    <h3><a href="https://github.com/programble/dotvim">Dotvim</a></h2>
+    <p>Vim configuration</p>
+  </div>
 </div>
