Update Apricot link for org

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Projects
     <h2>Applications</h2>
 
     <h3>
-      <a href="https://github.com/programble/apricot">Apricot</a>
+      <a href="https://github.com/apricot-lang/apricot">Apricot</a>
       <small>Ruby</small>
     </h3>
     <p>Clojure-like Lisp on Rubinius</p>
