List projects in two columns on small devices

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Projects
 </div>
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 col-sm-6">
     <h2>Applications</h2>
 
     <h3>
@@ -30,7 +30,7 @@ title: Projects
     <p>Keylogger for X</p>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-md-4 col-sm-6">
     <h2>Web</h2>
 
     <h3>
@@ -52,7 +52,9 @@ title: Projects
     <p>Personal website</p>
   </div>
 
-  <div class="col-md-4">
+  <div class="clearfix visible-sm"></div>
+
+  <div class="col-md-4 col-sm-6">
     <h2>IRC</h2>
 
     <h3>
@@ -67,10 +69,10 @@ title: Projects
     </h3>
     <p>Last.fm bot</p>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-md-4">
+  <div class="clearfix visible-md visible-lg"></div>
+
+  <div class="col-md-4 col-sm-6">
     <h2>Libraries</h2>
 
     <h3>
@@ -86,7 +88,9 @@ title: Projects
     <p>MusicBrainz API client</p>
   </div>
 
-  <div class="col-md-4">
+  <div class="clearfix visible-sm"></div>
+
+  <div class="col-md-4 col-sm-6">
     <h2>Contributions</h2>
 
     <h3>
@@ -96,7 +100,7 @@ title: Projects
     <p>"The Reference Heap" pastebin</p>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-md-4 col-sm-6">
     <h2>Configurations</h2>
 
     <h3><a href="https://github.com/programble/dotfiles">Dotfiles</a></h2>
