Add MongoDB to skills

--- a/resume.html
+++ b/resume.html
@@ -52,6 +52,9 @@ title: Résumé
   <dt>Programming languages</dt>
   <dd>Ruby, C, Clojure, Javascript</dd>
 
+  <dt>Databases</dt>
+  <dd>MongoDB</dd>
+
   <dt>Operating systems</dt>
   <dd>Ubuntu, Arch Linux, Windows</dd>
 
