Add EleventhBot to project list

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@ title: Projects
     <p>Github commit notification bot</p>
 
     <h3>
+      <a href="https://github.com/programble/eleventhbot">EleventhBot</a>
+      <small>Ruby</small>
+    </h3>
+    <p>Modular multi-purpose bot</p>
+
+    <h3>
       <a href="https://github.com/programble/lastirc">Lastirc</a>
       <small>Ruby</small>
     </h3>
