Add "About Me" landing page

--- a/index.html
+++ b/index.html
@@ -1,118 +1,43 @@
 ---
 layout: default
-title: Projects
+title: About Me
 ---
 
-<div class="page-header">
-  <h1>Projects</h1>
+<div class="page-header hidden">
+  <h1>About Me</h2>
 </div>
 
 <div class="row">
-  <div class="col-md-4 col-sm-6">
-    <h2>Applications</h2>
-
-    <h3>
-      <a href="https://github.com/apricot-lang/apricot">Apricot</a>
-      <small>Ruby</small>
-    </h3>
-    <p>Clojure-like Lisp on Rubinius</p>
-
-    <h3>
-      <a href="https://github.com/programble/effuse">Effuse</a>
-      <small>Ruby</small>
-    </h3>
-    <p>Tool for symlinking dotfiles</p>
-
-    <h3>
-      <a href="https://github.com/programble/keyloog">Keyloog</a>
-      <small>C</small>
-    </h3>
-    <p>Keylogger for X</p>
+  <div class="col-sm-4">
+    <p>
+      <img src="http://gravatar.com/avatar/ca0c9cb798fd7f80444740a4dbaef7b9?s=360"
+           alt="My face" class="img-responsive img-rounded">
+    </p>
   </div>
 
-  <div class="col-md-4 col-sm-6">
-    <h2>Web</h2>
-
-    <h3>
-      <a href="https://github.com/programble/avery">Avery</a>
-      <small>Node.js</small>
-    </h3>
-    <p>MPD Client</p>
-
-    <h3>
-      <a href="https://github.com/programble/spibble">Spibble</a>
-      <small>Clojure, MongoDB</small>
-    </h3>
-    <p>Scrobble records as you spin them</p>
-
-    <h3>
-      <a href="https://github.com/programble/programble.github.io">programble.me</a>
-      <small>Jekyll</small>
-    </h3>
-    <p>Personal website</p>
-  </div>
-
-  <div class="clearfix visible-sm"></div>
-
-  <div class="col-md-4 col-sm-6">
-    <h2>IRC</h2>
-
-    <h3>
-      <a href="https://github.com/programble/RCMP">RCMP</a>
-      <small>Ruby</small>
-    </h3>
-    <p>Github commit notification bot</p>
-
-    <h3>
-      <a href="https://github.com/programble/eleventhbot">EleventhBot</a>
-      <small>Ruby</small>
-    </h3>
-    <p>Modular multi-purpose bot</p>
-
-    <h3>
-      <a href="https://github.com/programble/lastirc">Lastirc</a>
-      <small>Ruby</small>
-    </h3>
-    <p>Last.fm bot</p>
-  </div>
-
-  <div class="clearfix visible-md visible-lg"></div>
-
-  <div class="col-md-4 col-sm-6">
-    <h2>Libraries</h2>
-
-    <h3>
-      <a href="https://github.com/programble/configru">Configru</a>
-      <small>Ruby</small>
-    </h3>
-    <p>YAML configuration library</p>
-
-    <h3>
-      <a href="https://github.com/programble/cljmb">CLJMB</a>
-      <small>Clojure</small>
-    </h3>
-    <p>MusicBrainz API client</p>
-  </div>
-
-  <div class="clearfix visible-sm"></div>
-
-  <div class="col-md-4 col-sm-6">
-    <h2>Contributions</h2>
-
-    <h3>
-      <a href="https://github.com/Raynes/refheap">Refheap</a>
-      <small>Clojure, MongoDB</small>
-    </h3>
-    <p>"The Reference Heap" pastebin</p>
-  </div>
-
-  <div class="col-md-4 col-sm-6">
-    <h2>Configurations</h2>
-
-    <h3><a href="https://github.com/programble/dotfiles">Dotfiles</a></h3>
-    <p>Various configuration files</p>
-
-    <h3><a href="https://github.com/programble/dotvim">Dotvim</a></h3>
-    <p>Vim configuration</p>
+  <div class="col-sm-8">
+    <p class="lead">
+      Hi. I'm Curtis. I am an 18-year-old aspiring software developer near
+      Montreal, Quebec.
+    </p>
+    <p>
+      I am currently a student at <a href="http://dawsoncollege.qc.ca">Dawson
+      College</a> in the Computer Science Technology program.
+    </p>
+    <p>
+      In my spare time I work on hobby software
+      <a href="projects.html">projects</a>, which can be found on
+      <a href="https://github.com/programble">GitHub</a> or
+      <a href="https://bitbucket.org/programble">Bitbucket</a>. My preferred
+      tools of the trade are Ruby, C, Clojure and JavaScript, and I do it all
+      on Ubuntu.
+    </p>
+    <p>
+      While I'm coding, I tend to be listening to music, which I scrobble to
+      <a href="http://www.last.fm/user/programble">Last.fm</a>. Some of my
+      favorite artists are <em>mewithoutYou</em>, <em>Godspeed You! Black
+      Emperor</em>, <em>Neutral Milk Hotel</em> and <em>Arcade Fire</em>. I am
+      also a collector of records.
+    </p>
   </div>
 </div>
