Update RCMP description

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@ title: Projects
       <a href="https://github.com/programble/RCMP">RCMP</a>
       <small>Ruby</small>
     </h3>
-    <p>Github commit notification bot</p>
+    <p>VCS push notification IRC bot</p>
 
     <h3>
       <a href="https://github.com/programble/eleventhbot">EleventhBot</a>
