Change "developer" to "engineer"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: About Me
 
   <div class="col-sm-8">
     <p class="lead">
-      Hi. I'm Curtis. I am an 18-year-old aspiring software developer near
+      Hi. I'm Curtis. I am an 18-year-old aspiring software engineer near
       Montreal, Quebec.
     </p>
     <p>
