Future-proof my age description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ title: About Me
 
   <div class="col-sm-8">
     <p class="lead">
-      Hi. I'm Curtis. I am an 18-year-old aspiring software engineer near
+      Hi. I'm Curtis. I am <span id="a">an</span>
+      <span id="age">17</span>-year-old aspiring software engineer near
       Montreal, Quebec.
     </p>
     <p>
