Add Redis to Resume

--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@ id: resume
   <dd>Ruby, C, Clojure, Javascript</dd>
 
   <dt>Databases</dt>
-  <dd>MongoDB</dd>
+  <dd>MongoDB, Redis</dd>
 
   <dt>Operating systems</dt>
   <dd>Ubuntu, Arch Linux, Windows</dd>
