Add Redis to EleventhBot description

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@ id: projects
 
     <h3>
       <a href="https://github.com/programble/eleventhbot">EleventhBot</a>
-      <small>Ruby</small>
+      <small>Ruby, Redis</small>
     </h3>
     <p>Modular multi-purpose bot</p>
 
