Replace Avery and Spibble with Dirt

--- a/projects.html
+++ b/projects.html
@@ -35,16 +35,10 @@ id: projects
     <h2>Web</h2>
 
     <h3>
-      <a href="https://github.com/programble/avery">Avery</a>
-      <small>Node.js</small>
+      <a href="https://github.com/programble/dirt">Dirt</a>
+      <small>Ruby, Redis</small>
     </h3>
-    <p>MPD Client</p>
-
-    <h3>
-      <a href="https://github.com/programble/spibble">Spibble</a>
-      <small>Clojure, MongoDB</small>
-    </h3>
-    <p>Scrobble records as you spin them</p>
+    <p>Language detection service</p>
 
     <h3>
       <a href="https://github.com/programble/programble.github.io">programble.me</a>
