Correct typo in Resume

--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@ id: resume
 
 <dl>
   <dt>Programming languages</dt>
-  <dd>Ruby, C, Clojure, Javascript</dd>
+  <dd>Ruby, C, Clojure, JavaScript</dd>
 
   <dt>Databases</dt>
   <dd>MongoDB, Redis</dd>
