Use Font Awesome 4.0.1

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@ id: resume
     <a class="btn btn-primary"
        href="https://www.dropbox.com/s/a76oywtst832ofk/Resume.pdf"
        target="_blank">
-      <i class="icon-download"></i> PDF
+      <i class="fa fa-download"></i> PDF
     </a>
   </div>
 
