Remove Dotvim from projects and update Dotfiles description

--- a/projects.html
+++ b/projects.html
@@ -105,9 +105,6 @@ id: projects
     <h2>Configurations</h2>
 
     <h3><a href="https://github.com/programble/dotfiles">Dotfiles</a></h3>
-    <p>Various configuration files</p>
-
-    <h3><a href="https://github.com/programble/dotvim">Dotvim</a></h3>
-    <p>Vim configuration</p>
+    <p>Configuration files for VIM, zsh, etc.</p>
   </div>
 </div>
