Add links to websites of projects

--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,9 @@ id: projects
 
     <h3>
       <a href="https://github.com/programble/RCMP">RCMP</a>
+      <small>
+        <a href="http://rcmp.pw"><i class="fa fa-external-link-square"></i></a>
+      </small>
       <small>Ruby</small>
     </h3>
     <p>VCS push notification bot</p>
@@ -96,6 +99,9 @@ id: projects
 
     <h3>
       <a href="https://github.com/Raynes/refheap">Refheap</a>
+      <small>
+        <a href="https://refheap.com"><i class="fa fa-external-link-square"></i></a>
+      </small>
       <small>Clojure, MongoDB</small>
     </h3>
     <p>"The Reference Heap" pastebin</p>
