--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,15 @@ id: projects
     <h2>Web</h2>
 
     <h3>
+      <a href="https://github.com/programble/letterwang">Letterwang</a>
+      <small>
+        <a href="http://letterwang.herokuapp.com"><i class="fa fa-external-link-square"></i></a>
+      </small>
+      <small>Node.js</small>
+    </h3>
+    <p>Multiplayer word-spelling game</p>
+
+    <h3>
       <a href="https://github.com/programble/dirt">Dirt</a>
       <small>Ruby, Redis</small>
     </h3>
