--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@ id: projects
     <h3>
       <a href="https://github.com/programble/letterwang">Letterwang</a>
       <small>
-        <a href="http://letterwang.herokuapp.com"><i class="fa fa-external-link-square"></i></a>
+        <a href="http://letterwang.pw"><i class="fa fa-external-link-square"></i></a>
       </small>
       <small>Node.js</small>
     </h3>
