Migrate to cmcenroe.me

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@ id: projects
     <p>Language detection service</p>
 
     <h3>
-      <a href="https://github.com/programble/programble.github.io">programble.me</a>
+      <a href="https://github.com/programble/programble.github.io">cmcenroe.me</a>
       <small>Jekyll</small>
     </h3>
     <p>Personal website</p>
