--- a/resume.html
+++ b/resume.html
@@ -24,10 +24,10 @@ id: resume
   </p>
   <p>
     <span class="visible-print">
-      Website: programble.me
+      Website: cmcenroe.me
     </span>
     <span class="hidden-print">
-      <a href="http://programble.me">programble.me</a>
+      <a href="http://cmcenroe.me">cmcenroe.me</a>
     </span>
   </p>
 </div>
