Add Templates to Configurations section of Projects

--- a/projects.html
+++ b/projects.html
@@ -121,5 +121,8 @@ id: projects
 
     <h3><a href="https://github.com/programble/dotfiles">Dotfiles</a></h3>
     <p>Configuration files for VIM, zsh, etc.</p>
+
+    <h3><a href="https://github.com/programble/templates">Templates</a></h3>
+    <p>File templates</p>
   </div>
 </div>
