Update about me with Busbud

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ id: about
   <div class="col-sm-8">
     <p class="lead">
       Hi. I'm Curtis. I am <span id="a">an</span>
-      <span id="age">18</span>-year-old aspiring software engineer near
-      Montreal, Quebec.
+      <span id="age">18</span>-year-old software engineer near Montreal,
+      Quebec.
     </p>
-    <p>
-      I am currently a student at <a href="http://dawsoncollege.qc.ca">Dawson
-      College</a> in the Computer Science Technology program.
+    <p class="lead">
+      I am currently a web developer at
+      <a href="http://www.busbud.com">Busbud</a>.
     </p>
     <p>
       In my spare time I work on hobby software
