--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ id: about
 <div class="row">
   <div class="col-sm-4">
     <p>
-      <img src="http://gravatar.com/avatar/ca0c9cb798fd7f80444740a4dbaef7b9?s=360"
+      <img src="http://gravatar.com/avatar/{{ site.gravatar }}?s=360"
            alt="My face" class="img-responsive img-rounded">
     </p>
   </div>
