Update resume with Busbud

--- a/resume.html
+++ b/resume.html
@@ -32,33 +32,47 @@ id: resume
   </p>
 </div>
 
+<h3>Skills</h3>
+
+<dl class="dl-horizontal">
+  <dt>Languages</dt>
+  <dd>Ruby, JavaScript, Clojure, C</dd>
+
+  <dt>Databases</dt>
+  <dd>PostgreSQL, MongoDB, Redis</dd>
+
+  <dt>Operating systems</dt>
+  <dd>Ubuntu, Arch Linux</dd>
+
+  <dt>Tools</dt>
+  <dd>Vim, Git</dd>
+</dl>
+
+<h3>Experience</h3>
+
+<ol class="list-unstyled">
+  <li>
+    <strong>Web developer, December 2013 – present</strong><br>
+    Busbud, Montréal, Québec, Canada<br>
+    <ul>
+      <li>Designed efficient web services to access Busbud's data</li>
+      <li>Optimized requests to reduce latency</li>
+      <li>Wrote clear, maintainable code, concise design docs and resilient tests</li>
+    </ul>
+  </li>
+</ol>
+
 <h3>Education</h3>
 
 <ol class="list-unstyled">
-  <li>Computer Science Technology, Dawson College, 2013-2016</li>
-  <li>Pure and Applied Science, Dawson College, 2012-2013</li>
-  <li>Howard S. Billings Regional High School, 2007-2012</li>
+  <li>Computer Science Technology, Dawson College, 2013</li>
+  <li>Pure and Applied Science, Dawson College, 2012–2013</li>
+  <li>Howard S. Billings Regional High School, 2007–2012</li>
 </ol>
 
 <h3>Honours and Awards</h3>
 
 <ol class="list-unstyled">
   <li>Physics Award, Howard S. Billings Regional High School, 2012</li>
-  <li>Academic Honour Roll, Howard S. Billings Regional High School, 2007-2012</li>
+  <li>Academic Honour Roll, Howard S. Billings Regional High School, 2007–2012</li>
 </ol>
-
-<h3>Skills</h3>
-
-<dl>
-  <dt>Programming languages</dt>
-  <dd>Ruby, C, Clojure, JavaScript</dd>
-
-  <dt>Databases</dt>
-  <dd>MongoDB, Redis</dd>
-
-  <dt>Operating systems</dt>
-  <dd>Ubuntu, Arch Linux, Windows</dd>
-
-  <dt>Tools</dt>
-  <dd>Vim, Git</dd>
-</dl>
