--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@ id: about
     <p>
       In my spare time I work on hobby software
       <a href="projects.html">projects</a>, which can be found on
-      <a href="https://github.com/programble">GitHub</a> or
-      <a href="https://bitbucket.org/programble">Bitbucket</a>. My preferred
-      tools of the trade are Ruby, C, Clojure and JavaScript, and I do it all
-      on Ubuntu.
+      <a href="https://github.com/programble">GitHub</a> or. My preferred tools
+      of the trade are Ruby, C, Clojure and JavaScript, and I do it all on
+      Ubuntu.
     </p>
     <p>
       While I'm coding, I tend to be listening to music, which I scrobble to
