Use curtis@cmcenroe.me

--- a/resume.html
+++ b/resume.html
@@ -16,10 +16,10 @@ id: resume
   <h3>Curtis McEnroe</h3>
   <p>
     <span class="visible-print">
-      Email: curtis.mcenroe@gmail.com
+      Email: {{ site.email }}
     </span>
     <span class="hidden-print">
-      <a href="mailto:curtis.mcenroe@gmail.com">curtis.mcenroe@gmail.com</a>
+      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
     </span>
   </p>
   <p>
