Replace Keyloog with Pult

--- a/projects.html
+++ b/projects.html
@@ -19,16 +19,16 @@ id: projects
     <p>Clojure-like Lisp on Rubinius</p>
 
     <h3>
+      <a href="https://github.com/programble/pult">Pult</a>
+      <small>Node.js</small>
+    </h3>
+    <p>Access local servers on .dev domains</p>
+
+    <h3>
       <a href="https://github.com/programble/effuse">Effuse</a>
       <small>Ruby</small>
     </h3>
     <p>Tool for symlinking dotfiles</p>
-
-    <h3>
-      <a href="https://github.com/programble/keyloog">Keyloog</a>
-      <small>C</small>
-    </h3>
-    <p>Keylogger for X</p>
   </div>
 
   <div class="col-md-4 col-sm-6">
