Rewrite index content

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@ id: about
 
   <div class="col-sm-8">
     <p class="lead">
-      Hi. I'm Curtis. I am <span id="a">an</span>
-      <span id="age">18</span>-year-old software engineer near Montreal,
+      Hi, I'm Curtis. I am <span id="a">an</span>
+      <span id="age">18</span>-year-old software engineer from Montreal,
       Quebec.
     </p>
-    <p class="lead">
+    <p>
       I am currently a web developer at
-      <a href="http://www.busbud.com">Busbud</a>.
+      <a href="http://www.busbud.com">Busbud</a>, an online bus travel startup.
     </p>
     <p>
-      In my spare time I work on hobby software
-      <a href="projects.html">projects</a>, which can be found on
-      <a href="https://github.com/programble">GitHub</a> or. My preferred tools
-      of the trade are Ruby, C, Clojure and JavaScript, and I do it all on
-      Ubuntu.
+      Outside of work, I also enjoy coding hobby
+      <a href="projects.html">projects</a> and contributing to open-source
+      software. My projects and contributions can be found on
+      <a href="https://github.com/programble">GitHub</a>. I work on Ubuntu and
+      mostly write JavaScript, Ruby or C.
     </p>
     <p>
-      While I'm coding, I tend to be listening to music, which I scrobble to
-      <a href="http://www.last.fm/user/programble">Last.fm</a>. Some of my
-      favorite artists are <em>mewithoutYou</em>, <em>Godspeed You! Black
-      Emperor</em>, <em>Neutral Milk Hotel</em> and <em>Arcade Fire</em>. I am
-      also a collector of records.
+      Other than software, I'm interested in music and collecting records. My
+      collection mostly consists of local post-rock, including <em>Godspeed
+      You! Black Emperor</em> and <em>Thee Silver Mt. Zion Memorial
+      Orchestra</em>. Some of my other favourite artists are
+      <em>mewithoutYou</em>, <em>Arcade Fire</em> and <em>Neutral Milk Hotel</em>.
     </p>
   </div>
 </div>
