Reorder languages on resume

--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@ id: resume
 
 <dl class="dl-horizontal">
   <dt>Languages</dt>
-  <dd>Ruby, JavaScript, Clojure, C</dd>
+  <dd>JavaScript, Ruby, C, Clojure</dd>
 
   <dt>Databases</dt>
   <dd>PostgreSQL, MongoDB, Redis</dd>
