Remove "currently" from current job.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ id: about
       Quebec.
     </p>
     <p>
-      I am currently a web developer at
-      <a href="http://www.busbud.com">Busbud</a>, an online bus travel startup.
+      I am a web developer at <a href="http://www.busbud.com">Busbud</a>, an
+      online bus travel startup.
     </p>
     <p>
       Outside of work, I also enjoy coding hobby
