Shuffle around projects

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,12 @@ id: projects
     <p>Access local servers on .dev domains</p>
 
     <h3>
+      <a href="https://github.com/programble/caps">Caps</a>
+      <small>Node.js</small>
+    </h3>
+    <p>Store any file on anonymous public services</p>
+
+    <h3>
       <a href="https://github.com/programble/effuse">Effuse</a>
       <small>Ruby</small>
     </h3>
@@ -33,6 +39,12 @@ id: projects
 
   <div class="col-md-4 col-sm-6">
     <h2>Web</h2>
+
+    <h3>
+      <a href="https://github.com/listens-ws">Listens.ws</a>
+      <small>Node.js, PostgreSQL</small>
+    </h3>
+    <p>Music listening history and statistics service</p>
 
     <h3>
       <a href="https://github.com/programble/letterwang">Letterwang</a>
@@ -59,28 +71,27 @@ id: projects
   <div class="clearfix visible-sm"></div>
 
   <div class="col-md-4 col-sm-6">
-    <h2>IRC</h2>
+    <h2>Experiments</h2>
 
     <h3>
-      <a href="https://github.com/programble/RCMP">RCMP</a>
-      <small>
-        <a href="http://rcmp.pw"><i class="fa fa-external-link-square"></i></a>
-      </small>
-      <small>Ruby</small>
+      <a href="https://github.com/programble/bare-metal-tetris">
+        Bare Metal Tetris
+      </a>
+      <small>C</small>
     </h3>
-    <p>VCS push notification bot</p>
+    <p>Tetris for x86</p>
 
     <h3>
-      <a href="https://github.com/programble/eleventhbot">EleventhBot</a>
-      <small>Ruby, Redis</small>
+      <a href="https://github.com/programble/forklimit">Forklimit</a>
+      <small>C</small>
     </h3>
-    <p>Modular multi-purpose bot</p>
+    <p>Prevent fork-bombs</p>
 
     <h3>
-      <a href="https://github.com/programble/lastirc">Lastirc</a>
-      <small>Ruby</small>
+      <a href="https://github.com/programble/keyloog">Keyloog</a>
+      <small>C</small>
     </h3>
-    <p>Last.fm bot</p>
+    <p>Keylogger for X</p>
   </div>
 
   <div class="clearfix visible-md visible-lg"></div>
@@ -121,6 +132,9 @@ id: projects
 
     <h3><a href="https://github.com/programble/dotfiles">Dotfiles</a></h3>
     <p>Configuration files for VIM, zsh, etc.</p>
+
+    <h3><a href="https://github.com/programble/jellybeans.vim">Jellybeans.vim</a></h3>
+    <p>Customized VIM colorscheme</p>
 
     <h3><a href="https://github.com/programble/templates">Templates</a></h3>
     <p>File templates</p>
