--- a/projects.html
+++ b/projects.html
@@ -10,34 +10,6 @@ id: projects
 
 <div class="row">
   <div class="col-md-4 col-sm-6">
-    <h2>Applications</h2>
-
-    <h3>
-      <a href="https://github.com/apricot-lang/apricot">Apricot</a>
-      <small>Ruby</small>
-    </h3>
-    <p>Clojure-like Lisp on Rubinius</p>
-
-    <h3>
-      <a href="https://github.com/programble/pult">Pult</a>
-      <small>Node.js</small>
-    </h3>
-    <p>Access local servers on .dev domains</p>
-
-    <h3>
-      <a href="https://github.com/programble/caps">Caps</a>
-      <small>Node.js</small>
-    </h3>
-    <p>Store any file on anonymous public services</p>
-
-    <h3>
-      <a href="https://github.com/programble/effuse">Effuse</a>
-      <small>Ruby</small>
-    </h3>
-    <p>Tool for symlinking dotfiles</p>
-  </div>
-
-  <div class="col-md-4 col-sm-6">
     <h2>Web</h2>
 
     <h3>
@@ -68,10 +40,38 @@ id: projects
     <p>Personal website</p>
   </div>
 
+  <div class="col-md-4 col-sm-6">
+    <h2>Tools</h2>
+
+    <h3>
+      <a href="https://github.com/apricot-lang/apricot">Apricot</a>
+      <small>Ruby</small>
+    </h3>
+    <p>Clojure-like Lisp on Rubinius</p>
+
+    <h3>
+      <a href="https://github.com/programble/pult">Pult</a>
+      <small>Node.js</small>
+    </h3>
+    <p>Access local servers on .dev domains</p>
+
+    <h3>
+      <a href="https://github.com/programble/effuse">Effuse</a>
+      <small>Ruby</small>
+    </h3>
+    <p>Tool for symlinking dotfiles</p>
+  </div>
+
   <div class="clearfix visible-sm"></div>
 
   <div class="col-md-4 col-sm-6">
     <h2>Experiments</h2>
+
+    <h3>
+      <a href="https://github.com/programble/caps">Caps</a>
+      <small>Node.js</small>
+    </h3>
+    <p>Store any file on anonymous public services</p>
 
     <h3>
       <a href="https://github.com/programble/bare-metal-tetris">
@@ -135,8 +135,5 @@ id: projects
 
     <h3><a href="https://github.com/programble/jellybeans.vim">Jellybeans.vim</a></h3>
     <p>Customized VIM colorscheme</p>
-
-    <h3><a href="https://github.com/programble/templates">Templates</a></h3>
-    <p>File templates</p>
   </div>
 </div>
