--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@ id: projects
 
     <h3>
       <a href="https://github.com/listens-ws">Listens.ws</a>
-      <small>Node.js, PostgreSQL</small>
+      <small>Node.js, PostgreSQL, <small>2014</small></small>
     </h3>
     <p>Music listening history and statistics service</p>
 
@@ -23,19 +23,19 @@ id: projects
       <small>
         <a href="http://letterwang.pw"><i class="fa fa-external-link-square"></i></a>
       </small>
-      <small>Node.js</small>
+      <small>Node.js, <small>2013</small></small>
     </h3>
     <p>Multiplayer word-spelling game</p>
 
     <h3>
       <a href="https://github.com/programble/dirt">Dirt</a>
-      <small>Ruby, Redis</small>
+      <small>Ruby, Redis, <small>2013</small></small>
     </h3>
     <p>Language detection service</p>
 
     <h3>
       <a href="https://github.com/programble/programble.github.io">cmcenroe.me</a>
-      <small>Jekyll</small>
+      <small>Jekyll, <small>2013–2014</small></small>
     </h3>
     <p>Personal website</p>
   </div>
@@ -45,19 +45,19 @@ id: projects
 
     <h3>
       <a href="https://github.com/apricot-lang/apricot">Apricot</a>
-      <small>Ruby</small>
+      <small>Ruby, <small>2012–2013</small></small>
     </h3>
     <p>Clojure-like Lisp on Rubinius</p>
 
     <h3>
       <a href="https://github.com/programble/pult">Pult</a>
-      <small>Node.js</small>
+      <small>Node.js, <small>2014</small></small>
     </h3>
     <p>Access local servers on .dev domains</p>
 
     <h3>
       <a href="https://github.com/programble/effuse">Effuse</a>
-      <small>Ruby</small>
+      <small>Ruby, <small>2012–2013</small></small>
     </h3>
     <p>Tool for symlinking dotfiles</p>
   </div>
@@ -69,7 +69,7 @@ id: projects
 
     <h3>
       <a href="https://github.com/programble/caps">Caps</a>
-      <small>Node.js</small>
+      <small>Node.js, <small>2014</small></small>
     </h3>
     <p>Store any file on anonymous public services</p>
 
@@ -77,19 +77,19 @@ id: projects
       <a href="https://github.com/programble/bare-metal-tetris">
         Bare Metal Tetris
       </a>
-      <small>C</small>
+      <small>C, <small>2014</small></small>
     </h3>
     <p>Tetris for x86</p>
 
     <h3>
       <a href="https://github.com/programble/forklimit">Forklimit</a>
-      <small>C</small>
+      <small>C, <small>2013</small></small>
     </h3>
     <p>Prevent fork-bombs</p>
 
     <h3>
       <a href="https://github.com/programble/keyloog">Keyloog</a>
-      <small>C</small>
+      <small>C, <small>2011</small></small>
     </h3>
     <p>Keylogger for X</p>
   </div>
@@ -101,13 +101,13 @@ id: projects
 
     <h3>
       <a href="https://github.com/programble/configru">Configru</a>
-      <small>Ruby</small>
+      <small>Ruby, <small>2011–2013</small></small>
     </h3>
     <p>YAML configuration library</p>
 
     <h3>
       <a href="https://github.com/programble/cljmb">CLJMB</a>
-      <small>Clojure</small>
+      <small>Clojure, <small>2013</small></small>
     </h3>
     <p>MusicBrainz API client</p>
   </div>
@@ -122,7 +122,7 @@ id: projects
       <small>
         <a href="https://refheap.com"><i class="fa fa-external-link-square"></i></a>
       </small>
-      <small>Clojure, MongoDB</small>
+      <small>Clojure, MongoDB, <small>2013</small></small>
     </h3>
     <p>"The Reference Heap" pastebin</p>
   </div>
