--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ id: about
 
   <div class="col-sm-8">
     <p class="lead">
-      Hi, I'm Curtis. I am <span id="a">an</span>
+      Hi, I'm Curtis. I am <span id="a">a</span>
       <span id="age">19</span>-year-old software engineer from Montreal,
       Quebec.
     </p>
