Add OS X to operating systems

--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@ id: resume
   <dd>PostgreSQL, MongoDB, Redis</dd>
 
   <dt>Operating systems</dt>
-  <dd>Ubuntu, Arch Linux</dd>
+  <dd>Mac OS X, Ubuntu, Arch Linux</dd>
 
   <dt>Tools</dt>
   <dd>Vim, Git</dd>
