Update list of things at Busbud

--- a/resume.html
+++ b/resume.html
@@ -55,9 +55,9 @@ id: resume
     <strong>Web developer, December 2013 – present</strong><br>
     Busbud, Montréal, Québec, Canada<br>
     <ul>
-      <li>Designed efficient web services to access Busbud's data</li>
-      <li>Optimized requests to reduce latency</li>
-      <li>Wrote clear, maintainable code, concise design docs and resilient tests</li>
+      <li>Migrated, designed, and optimized data models</li>
+      <li>Developed efficient APIs for accessing and interacting with Busbud's data</li>
+      <li>Implemented adapters for interacting with partners' APIs</li>
     </ul>
   </li>
 </ol>
