--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@ id: resume
   <dt>Languages</dt>
   <dd>JavaScript, Ruby, C, Clojure, Python</dd>
 
-  <dt>Databases</dt>
+  <dt>Datastores</dt>
   <dd>PostgreSQL, MongoDB, Redis</dd>
 
   <dt>Operating systems</dt>
