The usual project shuffle

--- a/projects.html
+++ b/projects.html
@@ -44,16 +44,16 @@ id: projects
     <h2>Tools</h2>
 
     <h3>
-      <a href="https://github.com/apricot-lang/apricot">Apricot</a>
-      <small>Ruby, <small>2012–2013</small></small>
-    </h3>
-    <p>Clojure-like Lisp on Rubinius</p>
-
-    <h3>
       <a href="https://github.com/programble/pult">Pult</a>
       <small>Node.js, <small>2014</small></small>
     </h3>
     <p>Access local servers on .dev domains</p>
+
+    <h3>
+      <a href="https://github.com/apricot-lang/apricot">Apricot</a>
+      <small>Ruby, <small>2012–2013</small></small>
+    </h3>
+    <p>Clojure-like Lisp on Rubinius</p>
 
     <h3>
       <a href="https://github.com/programble/effuse">Effuse</a>
@@ -133,7 +133,7 @@ id: projects
     <h3><a href="https://github.com/programble/dotfiles">Dotfiles</a></h3>
     <p>Configuration files for VIM, zsh, etc.</p>
 
-    <h3><a href="https://github.com/programble/jellybeans.vim">Jellybeans.vim</a></h3>
+    <h3><a href="https://github.com/programble/vim-hybrid">Hybrid.vim</a></h3>
     <p>Customized VIM colorscheme</p>
   </div>
 </div>
