Add Discohands to Contributions

--- a/projects.html
+++ b/projects.html
@@ -122,9 +122,18 @@ id: projects
       <small>
         <a href="https://refheap.com"><i class="fa fa-external-link-square"></i></a>
       </small>
-      <small>Clojure, MongoDB, <small>2013</small></small>
+      <small>Clojure, MongoDB, <small>2013–2014</small></small>
     </h3>
     <p>"The Reference Heap" pastebin</p>
+
+    <h3>
+      <a href="https://github.com/busbud/discohands">Discohands</a>
+      <small>
+        <a href="http://discohands-demo.herokuapp.com"><i class="fa fa-external-link-square"></i></a>
+      </small>
+      <small>Node.js, MongoDB, <small>2014</small></small>
+    </h3>
+    <p>Democratically choose topics to discuss</p>
   </div>
 
   <div class="col-md-4 col-sm-6">
