The usual index rewrite

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@ id: about
 
   <div class="col-sm-8">
     <p class="lead">
-      Hi, I'm Curtis. I am <span id="a">a</span>
-      <span id="age">19</span>-year-old software engineer from Montreal,
-      Quebec.
+      Hi, I'm Curtis. I am a 19-year-old software developer from Montréal,
+      Québec.
     </p>
     <p>
-      I am a web developer at <a href="http://www.busbud.com">Busbud</a>, an
-      online bus travel startup.
+      I work at <a href="https://www.busbud.com">Busbud</a>, an online bus
+      travel startup located in
+      <a href="http://en.wikipedia.org/wiki/Mile_End,_Montreal">Mile End</a>.
     </p>
     <p>
-      Outside of work, I also enjoy coding hobby
+      Outside of work, I also enjoy working on hobby
       <a href="projects.html">projects</a> and contributing to open-source
-      software. My projects and contributions can be found on
-      <a href="https://github.com/programble">GitHub</a>. I work on Ubuntu and
-      mostly write JavaScript, Ruby or C.
+      software. All of my public work can be found on
+      <a href="https://github.com/programble">GitHub</a>. These days I'm mostly
+      working with Node.js or C on OS X.
     </p>
     <p>
-      Other than software, I'm interested in music and collecting records. My
-      collection mostly consists of local post-rock, including <em>Godspeed
-      You! Black Emperor</em> and <em>Thee Silver Mt. Zion Memorial
-      Orchestra</em>. Some of my other favourite artists are
-      <em>mewithoutYou</em>, <em>Arcade Fire</em> and <em>Neutral Milk Hotel</em>.
+      My main interest after software development is music. I collect records,
+      mainly consisting of post-rock, such as <em>Godspeed You! Black
+      Emperor</em> and <em>Thee Silver Mt. Zion Memorial Orchestra</em>. Other
+      artists in my collection include <em>Swans</em>, <em>mewithoutYou</em>
+      and <em>Neutral Milk Hotel</em>.
     </p>
   </div>
 </div>
