Slight resume update

--- a/resume.html
+++ b/resume.html
@@ -36,13 +36,13 @@ id: resume
 
 <dl class="dl-horizontal">
   <dt>Languages</dt>
-  <dd>JavaScript, Ruby, C, Clojure, Python</dd>
+  <dd>JavaScript, C, Ruby, Clojure, Python</dd>
 
   <dt>Datastores</dt>
   <dd>PostgreSQL, MongoDB, Redis</dd>
 
-  <dt>Operating systems</dt>
-  <dd>Mac OS X, Ubuntu, Arch Linux</dd>
+  <dt>Systems</dt>
+  <dd>OS X, Ubuntu, Arch Linux</dd>
 
   <dt>Tools</dt>
   <dd>Vim, Git</dd>
@@ -57,7 +57,7 @@ id: resume
     <ul>
       <li>Migrated, designed, and optimized data models</li>
       <li>Developed efficient APIs for accessing and interacting with Busbud's data</li>
-      <li>Implemented adapters for interacting with partners' APIs</li>
+      <li>Implemented models, abstractions and adapters for interacting with partners' APIs</li>
     </ul>
   </li>
 </ol>
