Host resume PDF locally

--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@ id: resume
 <div class="page-header">
   <div class="pull-right hidden-print">
     <a class="btn btn-primary"
-       href="https://www.dropbox.com/s/a76oywtst832ofk/Resume.pdf"
+       href="resume.pdf"
        target="_blank">
       <i class="fa fa-download"></i> PDF
     </a>
