Link to records.cmcenroe.me

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@ id: about
       working with Node.js or C on OS X.
     </p>
     <p>
-      My main interest after software development is music. I collect records,
-      mainly consisting of post-rock, such as <em>Godspeed You! Black
-      Emperor</em> and <em>Thee Silver Mt. Zion Memorial Orchestra</em>. Other
-      artists in my collection include <em>Swans</em>, <em>mewithoutYou</em>
-      and <em>Neutral Milk Hotel</em>.
+      My main interest after software development is music. I collect
+      <a href="http://records.cmcenroe.me">records</a>, mainly consisting of
+      post-rock, such as <em>Godspeed You! Black Emperor</em> and <em>Thee
+      Silver Mt. Zion Memorial Orchestra</em>. Other artists in my collection
+      include <em>Swans</em>, <em>mewithoutYou</em> and <em>Neutral Milk
+      Hotel</em>.
     </p>
   </div>
 </div>
