Replace CLJMB with SuperError

--- a/projects.html
+++ b/projects.html
@@ -100,16 +100,16 @@ id: projects
     <h2>Libraries</h2>
 
     <h3>
+      <a href="https://github.com/busbud/super-error">SuperError</a>
+      <small>Node.js, <small>2014</small></small>
+    </h3>
+    <p>Easily subclass errors</p>
+
+    <h3>
       <a href="https://github.com/programble/configru">Configru</a>
       <small>Ruby, <small>2011–2013</small></small>
     </h3>
     <p>YAML configuration library</p>
-
-    <h3>
-      <a href="https://github.com/programble/cljmb">CLJMB</a>
-      <small>Clojure, <small>2013</small></small>
-    </h3>
-    <p>MusicBrainz API client</p>
   </div>
 
   <div class="clearfix visible-sm"></div>
