--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@ id: resume
   </p>
 </div>
 
-<h3>Skills</h3>
+<h3>Technical Experience</h3>
 
 <dl class="dl-horizontal">
   <dt>Languages</dt>
@@ -45,10 +45,10 @@ id: resume
   <dd>OS X, Ubuntu, Arch Linux</dd>
 
   <dt>Tools</dt>
-  <dd>Vim, Git</dd>
+  <dd>Git</dd>
 </dl>
 
-<h3>Experience</h3>
+<h3>Work Experience</h3>
 
 <ol class="list-unstyled">
   <li>
