Add Errio to projects page

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,13 @@ id: projects
     <h2>Libraries</h2>
 
     <h3>
+      <small><i class="fa fa-exchange"></i></small>
+      <a href="https://github.com/programble/errio">Errio</a>
+      <small>Node.js, <small>2015</small></small>
+    </h3>
+    <p>Error serialization and deserialization</p>
+
+    <h3>
       <small><i class="fa fa-exclamation-triangle"></i></small>
       <a href="https://github.com/busbud/super-error">SuperError</a>
       <small>Node.js, <small>2014</small></small>
