--- a/projects.html
+++ b/projects.html
@@ -99,6 +99,13 @@ id: projects
     <h2>Experiments</h2>
 
     <h3>
+      <small><i class="fa fa-picture-o"></i></small>
+      <a href="https://github.com/programble/gury">Gury</a>
+      <small>Node.js, <small>2015</small></small>
+    </h3>
+    <p>Upload anything to imgur</p>
+
+    <h3>
       <small><i class="fa fa-cloud-upload"></i></small>
       <a href="https://github.com/programble/caps">Caps</a>
       <small>Node.js, <small>2014</small></small>
