--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@ layout: default
       Québec.
     </p>
     <p>
-      I work at <a href="https://www.busbud.com">Busbud</a>, an online bus
-      travel startup located in
-      <a href="http://en.wikipedia.org/wiki/Mile_End,_Montreal">Mile End</a>.
-    </p>
-    <p>
-      Outside of work, I also enjoy working on hobby
+      I enjoy working on hobby
       <a href="projects.html">projects</a> and contributing to open-source
       software. All of my public work can be found on
       <a href="https://github.com/programble">GitHub</a>. These days I'm mostly
