Update resume dates

--- a/resume.html
+++ b/resume.html
@@ -52,12 +52,13 @@ id: resume
 
 <ol class="list-unstyled">
   <li>
-    <strong>Web developer, December 2013 – present</strong><br>
+    <strong>Developer, December 2013 – April 2015</strong><br>
     Busbud, Montréal, Québec, Canada<br>
     <ul>
       <li>Migrated, designed, and optimized data models</li>
       <li>Developed efficient APIs for accessing and interacting with Busbud's data</li>
       <li>Implemented models, abstractions and adapters for interacting with partners' APIs</li>
+      <li>Performed PostgreSQL database maintenance</li>
     </ul>
   </li>
 </ol>
