Add Sesame to projects

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,13 @@ id: projects
     <p>"The Reference Heap" pastebin</p>
 
     <h3>
+      <small><i class="fa fa-lock"></i></small>
+      <a href="https://github.com/busbud/sesame">Sesame</a>
+      <small>Node.js, PostgreSQL, <small>2015</small></small>
+    </h3>
+    <p>Secure data storage API</p>
+
+    <h3>
       <small><i class="fa fa-music"></i></small>
       <a href="https://github.com/listens-ws">Listens.ws</a>
       <small>Node.js, PostgreSQL, <small>2014</small></small>
