Update SuperError tech

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@ id: projects
     <h3>
       <small><i class="fa fa-exclamation-triangle"></i></small>
       <a href="https://github.com/busbud/super-error">SuperError</a>
-      <small>Node.js, <small>2014</small></small>
+      <small>JavaScript, <small>2014</small></small>
     </h3>
     <p>Easily subclass errors</p>
 
